--- a/templates/cocina.html
+++ b/templates/cocina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cocina - Sistema de Pedidos</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script src="/static/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <body>
 
