ya recibe ordenes

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
 <button onclick="window.location='{{url_for('meseros')}}'" style="cursor: pointer;">Meseros</button>
 <button onclick="window.location='{{url_for('cocina')}}'" style="cursor: pointer;">Cocina</button>
 <button onclick="window.location='{{url_for('mostrar_menu')}}'" style="cursor: pointer;">Menú</button>
+<img src="{{ url_for('static', filename='img/pizza.webp') }}" alt="Menu" width="400">
 
 </body>
 </html>
