--- a/templates/caja.html
+++ b/templates/caja.html
@@ -11,6 +11,7 @@
 <body>
 
 <h1>Caja - Sistema de Pedidos</h1>
+<img src="{{ url_for('static', filename='img/cashier.png') }}" alt="Caja" width="400">
 
 <button onclick="sumar()">Imprimir Ticket</button>
 <br>
