--- a/templates/meseros.html
+++ b/templates/meseros.html
@@ -12,6 +12,7 @@
 <body>
 
 <h1>Meseros - Sistema de Pedidos</h1>
+<img src="{{ url_for('static', filename='img/mesero.png') }}" alt="Meseros" width="400">
 
 
 <form id="formAñadir">
