--- a/templates/Cocinas.html
+++ b/templates/Cocinas.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title>Meseros</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <header>
-        <h1>Menu</h1>
-    </header>
+  
+        <h1>Bienvenido al Sistema De Pedidos - Cocina</h1>
+    
     <nav>
         <ul>
             <br>
             <br>
-            <li><a href="/MenuView">Ver Menu</a></li>
-            
+            <a href="/Eliminar">Terminar Pedido</a>
+            <a href="/ConsultarPedidos ">Consultar Pedidos </a>
             <li><a href="/">Regresar al inicio</a></li>
         </ul>
     </nav>
